# simopticon

./: README.md
Python/: calculations.py  generateTestData.py  h_infintyAproximator.py  plots.py
RestServer/: .gitignore  CMakeLists.txt  Readme.md  main.cpp  statusController.h
RestServer/python/: parse.py
RestServer/simopticonLib/: CMakeLists.txt  Config.cmake.in
RestServer/simopticonLib/src/: ReportGenerator.cpp  ReportGenerator.h
RestServer/simopticonLib/src/controller/: Controller.cpp  Controller.h
RestServer/simopticonLib/src/runner/plexe/: PlexeSimulationRunner.cpp
RestServer/simopticonLib/src/status/: StatusBar.cpp  StatusBar.h
RestServer/templates/: index.html
StabilityAnalyzer/: CMakeLists.txt  FourierTransform.cpp  FourierTransform.h  FrequencyResponseAnalyzer.cpp  FrequencyResponseAnalyzer.h  MagnitudeSpectrumBuilder.cpp  MagnitudeSpectrumBuilder.h  main.cpp  platooning.cpp  platooning.h  types.h
StabilityAnalyzer/Test/: CMakeLists.txt  helper.cpp  helper.h  test1.cpp
simopticonui/: NewProject.html  ParameterEvaluationEdit.html  ParameterOptimizerEdit.html  ParameterParameterEdit.html  ParameterRunnerEdit.html  ParameterSimopticonEdit.html  README.md  index.html  optimierung.html  package-lock.json  package.json  parse.py  resultmanagment.html  results.html  running.html  settings.html  simulation.html  test2.html  test2.js  welcomeInformation.html
simopticonui/css/: navbarStyles.css  styles.css
simopticonui/src/: Renderer_Index.js  Renderer_NewProject.js  Renderer_ParameterEdit.js  Renderer_ParameterEvalEdit.js  Renderer_ParameterOptimizerEdit.js  Renderer_ParameterRunnerEdit.js  Renderer_ParameterSimopticonEdit.js  Renderer_Results.js  Renderer_Settings.js  Renderer_running.js  index.js  parse.py  preload.js  resultmanger.js
